--- a/index.css
+++ b/index.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;700&family=Open+Sans:wght@300;400&family=Poppins:wght@200;300;500&family=Ubuntu:wght@500&display=swap');
-       #Main_container{
+        body {
+            background-color: #fafafa;
+            margin: auto;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+        }
+        #Main_container{
            margin: auto; 
            width: 80%;
         }
@@ -80,3 +85,177 @@
         text-align: center;
         border-radius: 50%;
     }
+    .bottom_box1{
+        height: auto;
+        width: 90%;
+        display: flex;
+        margin: auto;
+        margin-top: 50px;
+        background-color: white;
+        justify-content:space-around;
+        align-items: center;
+        padding: 16px;
+        box-sizing: border-box;
+    }
+    .bottom_box1_logo  div img {
+        height: 43px;
+        width: 200px;
+    }
+    .bottom_box1_logo div h3 {
+       font-size: 14px;
+       text-align: center;
+       margin-top: 4px;
+    }
+    .bottom_box1_1 {
+        text-align: center;
+    }
+    .bottom_box1_1 > .bottom_box1_text{
+        font-size: 8px;
+        margin-top: -8px;
+    }
+    .bottom_box1_1 > .bottom_box1_text1{
+        font-size: 14px;
+        margin-top: -10px;
+        color: gray;
+    }
+    .fa-solid {
+        color: gray;
+    }
+    .fa-solid:hover{
+        color: rgb(231, 193, 66);
+        cursor: pointer;
+    } 
+    .bottom_box1_text:hover{
+        color: rgb(231, 193, 66);
+        cursor: pointer;
+    } 
+    
+    .bottom_box2 {
+        height: 60px;
+        width: 90%;
+        margin: auto;
+        margin-top: 30px;
+        display: flex;
+        justify-content: space-between;
+    }
+    .bottom_box2_text {
+        font-size: 16px;
+        font-weight: bold;
+        color: gray;
+    }
+    .bottom_box2_email {
+        height: 40px;
+        width: 300px;
+    }
+    .bottom_box2_btn {
+        height: 42px;
+        width: 121px;
+        background-color: black;
+        color: white;
+        
+        border: none;
+    }
+    .bottom_box2_btn:hover{
+        background-color: gray;
+        cursor: pointer;
+    }
+    .bottom_box2_Soical_id  {
+        display: flex;
+        gap: 16px;
+        text-align: center;
+    }
+    .bottom_box2_Soical_id >div {
+        border-radius: 50px;
+        height: 20px;
+        width: 20px;
+        padding: 4px;
+        background-color: #464646;
+        
+    }
+    .fa-brands {
+        color: white;
+    }
+    .icon-fb:hover {
+        background-color: rgb(94, 85, 219);
+    }
+    .icon-mess:hover {
+        background-color: rgb(44, 138, 201);
+    }
+    .icon-y:hover {
+        background-color: red;
+    }
+    .icon-p:hover {
+        background-color: rgb(211, 32, 47);
+    }
+    .icon-vk:hover {
+        background-color: rgba(30, 60, 124, 0.863);
+    }
+    .icon-insta:hover {
+        background-color: rgb(44, 138, 201);
+    }
+    .icon-twi:hover {
+        background-color: rgb(44, 138, 201);
+    }
+    .icon-blo:hover {
+        background-color: rgba(231, 231, 48, 0.884);
+    }
+    .icon-tu:hover {
+        background-color: rgba(185, 175, 175, 0.692);
+    }
+    .bottom_box3 {
+        margin-top: 30px;
+        height: 300px;
+        width: 90%;
+        margin: auto;
+        display: flex;
+        line-height: px;
+        gap: 25px;
+        justify-content: space-between;
+    }
+    a {
+        text-decoration: none;
+        color: #978e87;
+    }
+    .bottom_box3_1 {
+        line-height: 5px;
+        font-size: 14px;
+    }
+    .bottom_box3_1a p{
+        font-size: 14px;
+        font-style: italic;
+    }
+    .bottom_box3_2 {
+        display: flex; 
+        gap: 10px;
+    }
+    .bottom_box3_2img {
+        height: 50px;
+        width: 180px;
+    }
+    .bottom_box3_2a {
+        display: grid;
+    }
+    .bottom_box4 {
+        height: 90px;
+        margin-top: 19px;
+        width: 90%;
+        margin: auto;
+        text-align: center;
+        justify-content: space-evenly;
+    }
+    .bottom_box4_img {
+        height: 35px;
+        width: 70px;
+        
+    }
+    .footer_text{
+        background-color: black;
+        color: white;
+        text-align: center;
+        font-size: 14px;
+        height: 28px;
+        width: 100%;
+        margin-bottom: 0px;
+    }
+   
+    
