Added bottomPage to newArrivalPage

--- a/new-arrival.css
+++ b/new-arrival.css
@@ -18,6 +18,9 @@
     font-size: 50px;
     
 }
+#logoColor{
+    color: black;
+}
 .slider:hover{
     cursor: pointer;
 }
@@ -55,8 +58,8 @@
     justify-content: space-around;
     
 }
-img{
-    width: 150px;
+.image>img{
+    width: 150px; 
     height: 150px;
     object-fit: contain;
 }
