--- a/productPage.css
+++ b/productPage.css
@@ -1,6 +1,7 @@
 body{
     background-color: #f2f2f2;
 }
+
 #head1 i{
     margin: auto;
 }
@@ -45,15 +46,120 @@ body{
 
 /* top part ended */
 
-.first_small_line{
-    display: flex;
-    border: 1px solid;
-    width: 95%;
+.line1{
+    width: 90%;
     height: auto;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 .start{
     display: flex;
+    margin-left: -20px;
+    justify-content: left;
+
 }
 .end{
     display: flex;
+}
+.box1{
+    border: 1px solid;
+    width: 90%;
+    height: 700px;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+.left_box{
+    width: 33%;
+    height: 600px;
+    border: 1px solid;
+}
+.right_box{
+    width: 63%;
+    height: 600px;
+    margin: auto;
+    border: 1px solid;
+}
+.img_box{
+    width: 100%;
+    height: 400px;
+    border: 1px solid;
+}
+.small_img{
+    width: 100%;
+    height: auto;
+    display: flex;
+    margin-top: 10px;
+}
+
+.small_img>div{
+    height: auto;
+    width: auto;
+    margin-left: 2%;
+}
+.small_img i{
+   font-size: 50px;
+}
+.small_img img:hover{
+    border: 2px solid yellow;
+    cursor: pointer;
+}
+.share{
+    width: 100%;
+    height: auto;
+    margin-top: 10px;
+    display: flex;
+    
+}
+.share>div{
+    height: 30px;
+    width: 30px;
+    margin-left: 5px;
+    margin-top: 10px;
+}
+
+.share img{
+    border-radius: 50%;
+    margin: auto;
+    height: 30px;
+    width: 30px;
+}
+.review{
+    display: flex;
+    align-items: center;
+    margin-top: -20px;
+    color: #138cff;
+}
+.SD{
+    width: 100%;
+    height: 68px;
+    background-color: #ff5d42;
+    border: 1px solid;
+    display: flex;
+    padding-right: 10px;
+    justify-content: space-between;
+    box-sizing: border-box;
+}
+.end{
+    display: flex;
+    justify-content: right;
+    margin-bottom: -25px;
+}
+.SD>p{
+    font-size: 30px;
+    color: white;
+    display: flex;
+    align-items: center;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-style: italic;
+    font-weight: bold;
+}
+.time_ends p{
+    color: white;
+    display: flex;
+    align-items: center;
 }
