--- a/index.css
+++ b/index.css
@@ -3,6 +3,7 @@
             background-color: #fafafa;
             margin: auto;
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+            
         }
         #Main_container{
            margin: auto; 
@@ -269,8 +270,13 @@
 
 /* top part css start here */
 
-
-    
+a{
+    text-decoration: none;
+    color: black;
+}
+.ahrefcategory{
+    color: white;
+   }
 #head{
     display: flex;
     justify-content: space-between;
