--- a/productPage.css
+++ b/productPage.css
@@ -692,6 +692,9 @@ button{
     display: flex;
     justify-content: space-between;
 }
+.yrvi{
+    margin-bottom: -10px;
+}
 .left_items{
     display: flex;
     
@@ -740,7 +743,93 @@ button{
 /* box 7 completed */
 
 .pop_searches{
+    width: 85%;
+    height: 120px;
+    margin: auto;
+    box-sizing: border-box;
+}
+.buy_electric_motors{
+    display: flex;
+    padding: 5px 15px;
+    height: 40px;
+    width: 100%;
+    box-sizing: border-box;
+    justify-content: space-between;
+    align-items: center;
+}
+.buy_electric_motors i{
+   margin: auto;
+   font-size: 15px;
+   margin-left: 5px;
+   color: #138cff;
+}
+.buy_electric_motors>p{
+    color: #138cff;
+}
+.buy_electric_motors>p:hover{
+    cursor: pointer;
+    text-decoration: underline 1px #138cff;
+}
+.listed_items{
+    margin: auto;
+    width: 100%;
+    height: 80px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    margin: 20px -20px;
     
+}
+.listed_items>p{
+    width: auto;
+    height: auto;
+    display: flex;
+    display: grid;
+    font-size: 14px;
+    margin-top: -18px;
+    color: #7e94b2;
+}
+.listed_items>p:hover{
+    cursor: pointer;
+    text-decoration: underline 1px #a1a1a1;
+}
+.bot_box2_subs{
+    display: flex;
+    align-items: center;
+    margin-left: 10px;
+    height: 50px;
+}
+.bot_box2_text{
+    font-weight: bold;
+    margin-right: 10px;
+}
+.bot_box2_btn{
+    background-color: black;
+    color: white;
+    margin-left: -1px;
+    border-color: transparent;
+}
+.bot_box2{
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 40px;
+    margin: auto;
+}
+.bot_box3{
+    width: 90%;
+    margin: auto;
+    margin-top: 30px;
+    display: flex;
+}
+.bot_box3>div{
+    width: 24%;
+    margin-bottom: 40px;
+}
+.footer_text{
+    align-items: center;
+    padding-top: 5px;
 }
 
 
