--- a/productPage.css
+++ b/productPage.css
@@ -11,6 +11,18 @@ body{
     width: 95%;
     margin: auto;
 }
+#searchbar{
+    justify-content: space-between;
+    align-items: center;
+    padding-right: 40px;
+}
+#sear{
+    margin-left: 10px;
+}
+#sign{
+    width: 500px;
+    justify-content: space-evenly;
+}
 #cato{
     display: flex;
    width: 80%;
@@ -75,7 +87,6 @@ body{
     height: 40px;
     display: flex;
     align-items: center;
-    margin-bottom: 30px;
 }
 .start_end>p:hover{
     cursor: pointer;
@@ -88,7 +99,6 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border: 1px solid;
 }
 .left_box{
     width: 33%;
@@ -164,7 +174,6 @@ body{
 }
 .review i{
     margin-left: 5px;
-    margin-bottom:40px ;
     color: #e0e0e0;
     font-size: 12px;
 }
@@ -179,6 +188,7 @@ body{
     border: 1px solid;
     display: flex;
     padding-right: 10px;
+    padding-left: 10px;
     justify-content: space-between;
     box-sizing: border-box;
     margin-bottom: 20px;
@@ -187,6 +197,7 @@ body{
     display: flex;
     justify-content: right;
     margin-bottom: -25px;
+    
 }
 .SD>p{
     font-size: 30px;
@@ -236,6 +247,7 @@ body{
     color: white;
     margin: auto;
     padding: 5px;
+    margin-left: 5px;
     border-radius: 5px;
 }
 .promo{
@@ -246,6 +258,10 @@ body{
 }
 .promo>p:nth-child(1){
     color: #7e94b2;
+}
+.promo>p:nth-child(2){
+    margin-left: 30px;
+    margin-right: 10px;
 }
 #view_more{
     color: #138cff;
@@ -267,8 +283,12 @@ body{
 .shipping>p:nth-child(1){
     color: #7e94b2;
 }
+.shipping>p:nth-child(2){
+    margin-left: 20px;
+}
 #US{
     color: #f63b6b;
+    margin-left: 30px;
     
 }
 .no_more{
@@ -328,24 +348,22 @@ body{
 .qty>p:nth-child(1){
     color: #7e94b2;
 }
+
 .nums{
     display: flex;
     margin-left: 65px;
-    margin-right: -15px;
+    margin-right: 5px;
 }
 .nums>div{
     border: 1px solid #aab0b8;
     width: 40px;
     height: 30px;
-    /* margin-right: 10px; */
     display: flex;
     justify-content: center;
     align-items: center;
 }
 .buttons{
     display: flex;
-    margin-left: 20px;
-    margin-bottom: -40px;
 }
 button:hover{
     cursor: pointer;
@@ -375,7 +393,7 @@ button:hover{
 .cards{
     display: flex;
     align-items: center;
-    margin-left: 20px;
+    /* margin-left: 20px; */
 }
 .paypal{
     width: 64px;
@@ -619,7 +637,8 @@ button:hover{
     width: 40%;
     box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;    height: auto;
     line-height: 1px;
-    padding-top: 10px;
+    padding: 10px 30px;
+    box-sizing: border-box;
 }
 .fi_st{
     display: flex;
@@ -786,6 +805,7 @@ button{
     display: flex;
     display: grid;
     font-size: 14px;
+    margin-left: 30px;
     margin-top: -18px;
     color: #7e94b2;
 }
