--- a/index.css
+++ b/index.css
@@ -2,9 +2,11 @@
         body {
             background-color: #fafafa;
             margin: auto;
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            overflow-x: hidden;
             
         }
+       
         #Main_container{
            margin: auto; 
            width: 80%;
