--- a/new-arrival.css
+++ b/new-arrival.css
@@ -446,6 +446,7 @@ margin-top: 30px;
   margin: auto;
  background-color: white;
  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+ justify-content: center;
 
    
 }
