--- a/app.css
+++ b/app.css
@@ -8,11 +8,12 @@
 body {
             background-color: #fafafa;
             margin: auto;
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ;
+            overflow-x: hidden;
         }
         #Main_container{
            margin: auto; 
-           width: 80%;
+          
         }
         .collection,.superdeals{
             /* width: 95%; */
@@ -225,10 +226,7 @@ body {
         gap: 25px;
         justify-content: space-between;
     }
-    a {
-        text-decoration: none;
-        color: #978e87;
-    }
+    
     .bottom_box3_1 {
         line-height: 5px;
         font-size: 14px;
@@ -355,8 +353,10 @@ margin-top: 30px;
     display: flex;
    width: 80%;
    margin: auto;
-  background-color: #ffda00;
- 
+  background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  justify-content: center;
+  
     
  }
  
@@ -376,7 +376,7 @@ margin-top: 30px;
 /* css for appData */
 #container {
 
-    width: 80%;
+   
  
    margin: auto;
    margin-top: 60px;
@@ -384,7 +384,7 @@ margin-top: 30px;
       display: grid;
       grid-template-columns: repeat(5, 1fr);
       gap: 10px;
-    
+    width: 90%;
     }
     body{
         font-family: Arial, Helvetica, sans-serif;
@@ -392,7 +392,7 @@ margin-top: 30px;
     }
     #container>div{
         
-      margin-left: 20px;
+      /* margin-left: 20px; */
       background-color: #FFFFFF;
       box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
      
@@ -589,7 +589,7 @@ margin-top: 30px;
     }
     a {
         text-decoration: none;
-        color: #978e87;
+        color: black;
     }
     .bottom_box3_1 {
         line-height: 5px;
